grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.struct_definition,
      $.enum_definition,
      $.function_definition,
      $.variable_declaration,
      $.constant_declaration,
      $.test_block,
      $.comment
    ),

    // Comments
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,
    
    // Function names, variables, fields, modules must start with lowercase or underscore
    value_identifier: $ => /[a-z_][a-zA-Z0-9_]*/,

    // Types
    type: $ => choice(
      $.primitive_type,
      $.type_identifier,
      $.tuple_type,
      $.generic_type,
      $.variadic_type,
      $.static_array_type,
      $.sized_type,
      $.function_type,
      $.type_parameter_ref  // Allow lowercase type parameters in type position
    ),

    primitive_type: $ => choice(
      'Int',
      'UInt',
      'Float',
      'Rune',
      'String',
      'Bool',
      'Void',
      'Type'
    ),

    sized_type: $ => seq(
      choice('Int', 'UInt', 'Float'),
      '(',
      $.number_literal,
      ')'
    ),

    type_parameter_ref: $ => $.value_identifier,

    tuple_type: $ => prec(PREC.TYPE, choice(
      seq('(', commaSep($.type), ')'),
      // Tuple without parens - must have at least 2 elements
      prec.right(-1, seq($.type, ',', commaSep1($.type)))
    )),

    generic_type: $ => prec(PREC.TYPE + 3, seq(
      $.type_identifier,
      '(',
      commaSep($.type_parameter),
      ')'
    )),

    type_parameter: $ => choice(
      $.type,
      seq($.value_identifier, $.type),  // Explicit const parameter: n Int
      seq(choice($.value_identifier, $.type_identifier), '=', $.type)  // With default: e = String
    ),

    variadic_type: $ => prec.dynamic(2, prec.left(1, seq(
      $.type,
      choice('*', '+')
    ))),

    static_array_type: $ => prec.dynamic(1, seq(
      field('element', alias($._non_array_type, $.type)),
      '*',
      field('size', alias($._static_array_size_expr, $.expression))  // Comptime expression (no blocks): t*n, t*(shape(0) * shape(1)), t*10
    )),

    // Types that can be used as the base of a static array (excludes variadic and static_array to prevent nesting)
    _non_array_type: $ => choice(
      $.primitive_type,
      $.type_identifier,
      $.tuple_type,
      $.generic_type,
      $.sized_type,
      $.function_type,
      $.type_parameter_ref
    ),

    // Static array size expressions - identifier immediately after * (no whitespace)
    // or parenthesized expression, or literal
    _static_array_size_expr: $ => choice(
      $.comptime_expression,
      $._static_array_size_identifier,  // Identifier with NO whitespace after *: t*n
      $.parenthesized_expression,  // Complex expressions: t*(n+1)
      $.number_literal,
      $.loop_variable
    ),

    // Struct definition
    struct_definition: $ => prec.dynamic(2, seq(
      optional($.visibility),
      $.type_identifier,
      $.struct_field_list
    )),

    struct_field_list: $ => seq(
      '(',
      optional(seq(commaSep($.type_parameter), ';')),
      optional(seq(
        alias($._field_or_param, $.struct_field),
        repeat(seq(choice(',', $._automatic_semicolon), alias($._field_or_param, $.struct_field))),
        optional(',')
      )),
      ')'
    ),

    visibility: $ => choice('+', '-'),

    _field_or_param: $ => choice(
      seq($.value_identifier, $.type),
      seq($.value_identifier, $.type, '=', $.expression),
      seq('..', $.type_identifier)
    ),

    struct_field: $ => prec.dynamic(2, choice(
      seq($.value_identifier, $.type),
      seq('..', $.type_identifier)
    )),

    // Enum definition
    enum_definition: $ => seq(
      optional($.visibility),
      $.type_identifier,
      '(',
      optional(seq(commaSep($.type_parameter), ';')),
      repeat($.enum_case),
      ')'
    ),

    enum_case: $ => choice(
      seq($.type_identifier, '(', optional(commaSep($.type)), ')'),
      $.type_identifier
    ),

    // Function definition
    function_definition: $ => prec.dynamic(3, seq(
      optional($.visibility),
      $.value_identifier,
      '(',
      optional(seq(commaSep($.type_parameter), ';')),
      optional(seq(
        alias($._field_or_param, $.parameter),
        repeat(seq(optional(','), alias($._field_or_param, $.parameter))),
        optional(',')
      )),
      ')',
      optional($.return_type),
      $.block
    )),

    parameter: $ => prec.dynamic(-1, prec(PREC.TYPE, choice(
      seq($.value_identifier, $.type),
      seq($.value_identifier, $.type, '=', $.expression)
    ))),

    return_type: $ => $.type,

    // Variable declaration
    block: $ => seq(
      '{',
      repeat(choice($.statement, seq($.expression, optional($._semicolon)))),
      '}'
    ),

    // Semicolon: explicit or automatic
    _semicolon: $ => choice(';', $._automatic_semicolon),

    // Statements
    expression: $ => choice(
      $.comptime_expression,
      $.assignment_expression,
      $.binary_expression,
      $.unary_expression,
      $.call_expression,
      $.match_expression,
      $.member_match_expression,
      $.method_call,
      $.field_access,
      $.namespace_access,
      $.struct_expression,
      $.enum_expression,
      $.interpolated_string,
      // tuple_expression removed - tuples are created by comma binary operator
      $.block,
      $.parenthesized_expression,  // Moved before closure to prefer it
      $.closure,  // Moved after parenthesized_expression
      $.loop_variable,
      $.value_identifier,
      $.type_identifier,
      $.number_literal,
      $.string_literal,
      $.rune_literal
    ),

    binary_expression: $ => choice(
      ...[
        [',', PREC.COMMA],       // Tuple creation - lowest precedence
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['==', PREC.EQUAL],
        ['!=', PREC.EQUAL],
        ['<', PREC.COMPARE],
        ['<=', PREC.COMPARE],
        ['>', PREC.COMPARE],
        ['>=', PREC.COMPARE],
        ['|', PREC.BITWISE_OR],
        ['&', PREC.BITWISE_AND],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
        ['++', PREC.CONCAT]
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $.expression),
          operator,
          field('right', $.expression)
        ))
      )
    ),

    call_expression: $ => prec.dynamic(1, prec.right(PREC.CALL, seq(
      $.expression,
      '(',
      optional($.expression),  // Comma operator handles multiple arguments
      ')',
      optional($.block)  // Trailing closure syntax
    ))),

    parenthesized_expression: $ => seq('(', optional($.expression), ')'),

    number_literal: $ => choice(
      /0x[0-9a-fA-F]+/,           // Hexadecimal: 0xFF, 0xDEADBEEF
      /0b[01]+/,                   // Binary: 0b1010, 0b11110000
      /\d+(\.\d+)?/                // Decimal: 123, 3.14
    ),

    // String literal without interpolation (no \( sequences)
    // Match: escaped chars (except \(), or non-quote/non-backslash chars
