test/corpus/type.txt
==================
Enum with type parameters and default
==================

+Result(t, e = String;
    Ok(t)
    Err(e)
)

---

(source_file
  (enum_definition
    (visibility)
    (type_identifier)
    (type_parameter
      (type
        (type_parameter_ref
          (value_identifier))))
    (type_parameter
      (value_identifier)
      (type
        (primitive_type)))
    (enum_case
      (type_identifier)
      (type
        (type_parameter_ref
          (value_identifier))))
    (enum_case
      (type_identifier)
      (type
        (type_parameter_ref
          (value_identifier))))))

==================
Generic enum with single type parameter
==================

+Option(t;
    Some(t)
    None
)

---

(source_file
  (enum_definition
    (visibility)
    (type_identifier)
    (type_parameter
      (type
        (type_parameter_ref
          (value_identifier))))
    (enum_case
      (type_identifier)
      (type
        (type_parameter_ref
          (value_identifier))))
    (enum_case
      (type_identifier))))

==================
Generic enum with single type parameter
==================

+Option(t;
    Some(t)
    None
)

---

(source_file
  (enum_definition
    (visibility)
    (type_identifier)
    (type_parameter
      (type
        (type_parameter_ref
          (value_identifier))))
    (enum_case
      (type_identifier)
      (type
        (type_parameter_ref
          (value_identifier))))
    (enum_case
      (type_identifier))))

==================
Generic enum with single type parameter (whitespace)
==================

+Option (t;
    Some(t)
    None
)

---

(source_file
  (enum_definition
    (visibility)
    (type_identifier)
    (type_parameter
      (type
        (type_parameter_ref
          (value_identifier))))
    (enum_case
      (type_identifier)
      (type
        (type_parameter_ref
          (value_identifier))))
    (enum_case
      (type_identifier))))

==================
Generic enum with implicit type parameter
==================

+Option(
    Some(t)
    None
)

---

(source_file
  (enum_definition
    (visibility)
    (type_identifier)
    (enum_case
      (type_identifier)
      (type
        (type_parameter_ref
          (value_identifier))))
    (enum_case
      (type_identifier))))

==================
Enum with associated values
==================

+IntOption(
    Some(Int)
    None
)

---

(source_file
  (enum_definition
    (visibility)
    (type_identifier)
    (enum_case
      (type_identifier)
      (type
        (primitive_type)))
    (enum_case
      (type_identifier))))

==================
Simple enum without type parameters
==================

+LogLevel (
    Trace
    Debug
    Info
    Warn
    Error
    Fatal
)

---

(source_file
  (enum_definition
    (visibility)
    (type_identifier)
    (enum_case
      (type_identifier))
    (enum_case
      (type_identifier))
    (enum_case
      (type_identifier))
    (enum_case
      (type_identifier))
    (enum_case
      (type_identifier))
    (enum_case
      (type_identifier))))

==================
Struct with primitive types
==================

+Point(x Float, y Float)

---

(source_file
  (struct_definition
    (visibility)
    (type_identifier)
    (struct_field_list
      (struct_field
        (value_identifier)
        (type
          (primitive_type)))
      (struct_field
        (value_identifier)
        (type
          (primitive_type))))))

==================
Struct with mixed field types
==================

+Person(
    name String,
    age Int,
    height Float,
    active Bool
)

---

(source_file
  (struct_definition
    (visibility)
    (type_identifier)
    (struct_field_list
      (struct_field
        (value_identifier)
        (type
          (primitive_type)))
      (struct_field
        (value_identifier)
        (type
          (primitive_type)))
      (struct_field
        (value_identifier)
        (type
          (primitive_type)))
      (struct_field
        (value_identifier)
        (type
          (primitive_type))))))

==================
Struct with generic type field
==================

+Container(value Option(Int))

---

(source_file
  (struct_definition
    (visibility)
    (type_identifier)
    (struct_field_list
      (struct_field
        (value_identifier)
        (type
          (generic_type
            (type_identifier)
            (type_parameter
              (type
                (primitive_type)))))))))

==================
Struct with tuple type field
==================

+Pair(values (Int, String))

---

(source_file
  (struct_definition
    (visibility)
    (type_identifier)
    (struct_field_list
      (struct_field
        (value_identifier)
        (type
          (tuple_type
            (type
              (primitive_type))
            (type
              (primitive_type))))))))

==================
Struct with sized integer type
==================

+SmallStruct(byte Int(8), word Int(16))

---

(source_file
  (struct_definition
    (visibility)
    (type_identifier)
    (struct_field_list
      (struct_field
        (value_identifier)
        (type
          (sized_type
            (number_literal))))
      (struct_field
        (value_identifier)
        (type
          (sized_type
            (number_literal)))))))

==================
Struct with variadic type
==================

+Logger(messages String*)

---

(source_file
  (struct_definition
    (visibility)
    (type_identifier)
    (struct_field_list
      (struct_field
        (value_identifier)
        (type
          (variadic_type
            (type
              (primitive_type))))))))

==================
Struct with custom struct type field
==================

+Rectangle(topLeft Point, bottomRight Point)

---

(source_file
  (struct_definition
    (visibility)
    (type_identifier)
    (struct_field_list
      (struct_field
        (value_identifier)
        (type
          (type_identifier)))
      (struct_field
        (value_identifier)
        (type
          (type_identifier))))))

==================
Nested generic types
==================

+Cache(data Option(Result(String, Int)))

---

(source_file
  (struct_definition
    (visibility)
    (type_identifier)
    (struct_field_list
      (struct_field
        (value_identifier)
        (type
          (generic_type
            (type_identifier)
            (type_parameter
              (type
                (generic_type
                  (type_identifier)
                  (type_parameter
                    (type
                      (primitive_type)))
                  (type_parameter
                    (type
                      (primitive_type))))))))))))

==================
Private struct definition
==================

-Internal(data Int)

---

(source_file
  (struct_definition
    (visibility)
    (type_identifier)
    (struct_field_list
      (struct_field
        (value_identifier)
        (type
          (primitive_type))))))

==================
Struct without visibility modifier
==================

Config(value String)

---

(source_file
  (struct_definition
    (type_identifier)
    (struct_field_list
      (struct_field
        (value_identifier)
        (type
          (primitive_type))))))

==================
Enum case with multiple type parameters
==================

+Either(a, b;
    Left(a)
    Right(b)
    Both(a, b)
)

---

(source_file
  (enum_definition
    (visibility)
    (type_identifier)
    (type_parameter
      (type
        (type_parameter_ref
          (value_identifier))))
    (type_parameter
      (type
        (type_parameter_ref
          (value_identifier))))
    (enum_case
      (type_identifier)
      (type
        (type_parameter_ref
          (value_identifier))))
    (enum_case
      (type_identifier)
      (type
        (type_parameter_ref
          (value_identifier))))
    (enum_case
      (type_identifier)
      (type
        (type_parameter_ref
          (value_identifier)))
      (type
        (type_parameter_ref
          (value_identifier))))))

==================
Static array with comptime variable
==================

+len(n Int; arr t*n) Int {
    n
}

---

(source_file
  (function_definition
    (visibility)
    (value_identifier)
    (type_parameter
      (value_identifier)
      (type
        (primitive_type)))
    (parameter
      (value_identifier)
      (type
        (static_array_type
          (type
            (type_parameter_ref
              (value_identifier)))
          (expression
            (value_identifier)))))
    (return_type
      (type
        (primitive_type)))
    (block
      (expression
        (value_identifier)))))

==================
Static array with comptime expression
==================

Matrix(
  shape (Int, Int);
  fields Int*(shape(0) * shape(1))
)

---
(source_file
  (struct_definition
    (type_identifier)
    (struct_field_list
      (type_parameter
        (value_identifier)
        (type
          (tuple_type
            (type
              (primitive_type))
            (type
              (primitive_type)))))
      (struct_field
        (value_identifier)
        (type
          (static_array_type
            (type
              (primitive_type))
            (expression
              (parenthesized_expression
                (expression
                  (binary_expression
                    (expression
                      (call_expression
                        (expression
                          (value_identifier))
                        (expression
                          (number_literal))))
                    (expression
                      (call_expression
                        (expression
                          (value_identifier))
                        (expression
                          (number_literal))))))))))))))
==================
Static array with numeric literal
==================

+FixedArray(values Int*10)

---

(source_file
  (struct_definition
    (visibility)
    (type_identifier)
    (struct_field_list
      (struct_field
        (value_identifier)
        (type
          (static_array_type
            (type
              (primitive_type))
            (expression
              (number_literal))))))))
